--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -25,22 +25,51 @@ a:hover{
 
 }
 
-.backimg{
+.backimg-linear{
+	
 	margin:0;
-  background: linear-gradient(
-  	to top,
-	rgba(255,255,255,0) 10%
-	rgba(255,255,255,0.5) 25%
-	rgba(255,255,255,0.7) 40%
-	rgba(255,255,255,1) 50%
-	rgba(255,255,255,1) 75%
-	rgba(255,255,255,1) 100%	
-	),
-	url("/image/backImage.jpg");
-  width: 100%;
+	width: 100%;
 }
 
+.indedetail-button{
+	font-family: 'Pretendard-Regular';
+	background-color: #CBF1F5;
+	color: black;
+	width: 80px;
+	height:30px;
+	padding: 0.2px;
+	border-top-left-radius: 12px 12px;
+	border-top-right-radius: 12px 12px;
+	border: none;
+	text-align:center;
+	cursor:pointer;
+}
 
+.indexbutton-position{
+	
+	position: absolute;
+	top: 43%;
+	right:37%;
+	
+}
+
+.back{
+	position: fixed;
+	opacity: 0.95;
+	
+	text-align:left;
+	padding-left:2%;
+	padding-top:5%;
+	padding-bottom:6%;
+	
+	background-color: #FFF1C1;
+	width: 530px;
+	height: 80px;
+	border-radius: 4px;
+	position : absolute;
+	top: 46%;
+	left:34%;
+}
 
 .but{
 	font-family: 'Pretendard-Regular';
@@ -55,8 +84,10 @@ a:hover{
 .blank{
 	font-family: 'Pretendard-Regular';
 	border: 0;
-	margin: 3px;
-	border-radius: 3px;
+	padding-left: 8px;
+	padding-top : 2px;
+	padding-bottom : 2px;
+	border-radius: 4px;
 }
 
 .root{
