--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -95,3 +95,12 @@ a:hover{
 	text-align: center;
 	
 }
+
+ .camping-item {
+        display: inline-block;
+        text-align: center;
+        vertical-align: top;
+      	margin: 0 20px 20px 0;
+    }
+    
+    
