--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -1,3 +1,4 @@
+
 @charset "UTF-8";
 
 @font-face {
@@ -17,7 +18,7 @@
 a{
 	text-decoration: none;
 	color: black;
-	
+
 }
 
 a:hover{
@@ -26,7 +27,7 @@ a:hover{
 }
 
 .backimg-linear{
-	
+
 	margin:0;
 	width: 100%;
 }
@@ -46,22 +47,22 @@ a:hover{
 }
 
 .indexbutton-position{
-	
+
 	position: absolute;
 	top: 43%;
 	right:37%;
-	
+
 }
 
 .back{
 	position: fixed;
 	opacity: 0.95;
-	
+
 	text-align:left;
 	padding-left:2%;
 	padding-top:5%;
 	padding-bottom:6%;
-	
+
 	background-color: #FFF1C1;
 	width: 530px;
 	height: 80px;
@@ -73,13 +74,27 @@ a:hover{
 
 .but{
 	font-family: 'Pretendard-Regular';
-	padding: 2px 3px;
-	background-color: black;
-	color: white;
+	padding: 3px 5px;
+	background-color: white;
 	margin :1px;
-	border-radius: 2px;
+	border-radius: 6px;
+  border :2px solid #454545;
+	cursor: pointer;
+  text-align: center;
+
+}
+
+.but:hover{
+	font-family: 'Pretendard-Regular';
+	padding: 3px 5px;
+	background-color:#454545;
+  color : white;
+	margin :1px;
+	border-radius: 6px;
+  border :2px solid #454545;
 	cursor: pointer;
 }
+
 
 .blank{
 	font-family: 'Pretendard-Regular';
@@ -90,17 +105,34 @@ a:hover{
 	border-radius: 4px;
 }
 
+.loginId{
+  border-top-left-radius: 10px 10px;
+  border-top-right-radius: 10px 10px;
+  padding :20px;
+  height: 55px;
+  width: 300px;
+  border: 2px solid #454545;
+  font-size:19px;
+}
+
+.loginPass{
+  border-bottom-left-radius: 10px 10px;
+  border-bottom-right-radius: 10px 10px;
+  padding :20px;
+  height: 55px;
+  width: 300px;
+  border: 2px solid #454545;
+  font-size:19px;
+}
+
 .root{
 	font-family: 'Pretendard-Regular';
 	text-align: center;
-	
 }
 
- .camping-item {
+.camping-item {
         display: inline-block;
         text-align: center;
         vertical-align: top;
       	margin: 0 20px 20px 0;
     }
-    
-    
