--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -14,7 +14,9 @@
     font-weight: 400;
     font-style: normal;
 }
-
+body {
+	height: 100%;
+}
 a{
 	text-decoration: none;
 	color: black;
@@ -30,6 +32,7 @@ a:hover{
 
 	margin:0;
 	width: 100%;
+	
 }
 
 .indedetail-button{
@@ -53,6 +56,55 @@ a:hover{
 	right:37%;
 
 }
+
+.searchbutton-position{
+
+	position: absolute;
+	top: 80%;
+	right:35%;
+
+}
+
+.searchbutton{
+	
+	font-family: 'Pretendard-Regular';
+	padding: 3px 5px;
+	background-color: white;
+	margin :1px;
+	border-radius: 6px;
+  	border :2px solid #CBF1F5;
+	cursor: pointer;
+ 	text-align: center;
+ 	width: 200px;
+ 	height: 32px;
+ 	font-size: 18px;
+	
+}
+
+.searchbutton:hover{
+	
+	font-family: 'Pretendard-Regular';
+	padding: 3px 5px;
+	background-color: #CBF1F5;
+	margin :1px;
+	border-radius: 6px;
+  	border :2px solid #CBF1F5;
+	cursor: pointer;
+ 	text-align: center;
+	width: 200px;
+ 	height: 32px;
+ 	font-size: 18px;
+}
+
+
+.belt{
+	background-color: #FFF1C1;
+	width: 100%;
+	height:300px;
+	position: absolute;
+	bottom: -47%;
+}
+
 
 .back{
 	position: fixed;
@@ -78,9 +130,9 @@ a:hover{
 	background-color: white;
 	margin :1px;
 	border-radius: 6px;
-  border :2px solid #454545;
+  	border :2px solid #454545;
 	cursor: pointer;
-  text-align: center;
+ 	text-align: center;
 
 }
 
