--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -22,14 +22,18 @@ a{
 }
 
 a:hover{
-	color:	#05BFDB;
-
+	color:#05BFDB;
 }
 
 .backimg-linear{
-
 	margin:0;
 	width: 100%;
+}
+
+.logo{
+	width: 600px;
+	padding-top: 4em;
+	padding-bottom: 6em;
 }
 
 .indedetail-button{
@@ -47,22 +51,24 @@ a:hover{
 }
 
 .indexbutton-position{
-
 	position: absolute;
 	top: 43%;
 	right:37%;
 
 }
 
+.title{
+	font-family: 'MBC1961GulimM';
+	font-size: 40px;
+}
+
 .back{
 	position: fixed;
 	opacity: 0.95;
-
 	text-align:left;
 	padding-left:2%;
 	padding-top:5%;
 	padding-bottom:6%;
-
 	background-color: #FFF1C1;
 	width: 530px;
 	height: 80px;
@@ -78,23 +84,47 @@ a:hover{
 	background-color: white;
 	margin :1px;
 	border-radius: 6px;
-  border :2px solid #454545;
+	border :2px solid #454545;
 	cursor: pointer;
-  text-align: center;
-
+ 	text-align: center;
 }
 
 .but:hover{
 	font-family: 'Pretendard-Regular';
 	padding: 3px 5px;
 	background-color:#454545;
-  color : white;
+ 	color : white;
 	margin :1px;
 	border-radius: 6px;
-  border :2px solid #454545;
+  	border :2px solid #454545;
 	cursor: pointer;
 }
 
+.sign-button{
+	font-family: 'Pretendard-Regular';
+	padding: 3px 5px;
+	background-color:#454545;
+	margin :1px;
+	border-radius: 6px;
+	border :2px solid #454545;
+	cursor: pointer;
+ 	text-align: center;
+ 	width: 100px;
+ 	height: 30px;
+ 	font-size: 15px;
+ 	color: #F6F1E9;
+}
+
+.sign-button:hover{
+	
+	background-color:white;
+ 	color : #454545;
+	margin :1px;
+	border-radius: 6px;
+  	border :2px solid #454545;
+	cursor: pointer;
+
+}
 
 .blank{
 	font-family: 'Pretendard-Regular';
@@ -105,29 +135,63 @@ a:hover{
 	border-radius: 4px;
 }
 
+.signUp-balnk{
+	font-family: 'Pretendard-Regular';
+	border-radius: 6px;
+	padding:4px;
+	width: 280px;
+	height: 35px;
+	margin:2px;
+}
+
+.title-blank{
+	font-family: 'Pretendard-Regular';
+	border-radius: 6px;
+	border :1px solid #454545;
+	padding:10px;
+	width: 380px;
+}
+
+.postBody-blank{
+	font-family: 'Pretendard-Regular';
+	border-radius: 6px;
+	border :1px solid #454545;
+	padding:10px;
+	width: 430px;
+	height: 1030px;
+	text-align: left;
+	vertical-align: top;
+}
+
+
 .loginId{
   border-top-left-radius: 10px 10px;
   border-top-right-radius: 10px 10px;
-  padding :20px;
-  height: 55px;
+  padding :10px;
+  height: 45px;
   width: 300px;
   border: 2px solid #454545;
-  font-size:19px;
+  font-size:20px;
 }
 
 .loginPass{
   border-bottom-left-radius: 10px 10px;
   border-bottom-right-radius: 10px 10px;
-  padding :20px;
-  height: 55px;
+  padding :10px;
+  height: 45px;
   width: 300px;
   border: 2px solid #454545;
-  font-size:19px;
+  font-size:20px;
 }
 
 .root{
 	font-family: 'Pretendard-Regular';
 	text-align: center;
+}
+
+.postDetail-position{
+	padding: 15%;
+
 }
 
 .camping-item {
