--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -1,248 +1,287 @@
-
 @charset "UTF-8";
 
 @font-face {
-    font-family: 'MBC1961GulimM';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/MBC1961GulimM.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'MBC1961GulimM';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/MBC1961GulimM.woff2')
+		format('woff2');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
+	font-family: 'Pretendard-Regular';
+	src:
+		url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
+		format('woff');
+	font-weight: 400;
+	font-style: normal;
 }
+
 body {
 	height: 100%;
 }
 
-a{
+a {
 	text-decoration: none;
 	color: black;
 }
 
-a:hover{
-	color:#05BFDB;
+a:hover {
+	color: #05BFDB;
 }
 
-hr{
-	
+hr {
 	
 }
 
-.backimg-linear{
-	margin:0;
+.backimg-linear {
+	margin: 0;
 	width: 100%;
 }
 
-.logo{
+.logo {
 	width: 600px;
 	padding-top: 4em;
 	padding-bottom: 6em;
 }
 
-.indedetail-button{
+.indedetail-button {
 	font-family: 'Pretendard-Regular';
 	background-color: #CBF1F5;
 	color: black;
 	width: 80px;
-	height:30px;
+	height: 30px;
 	padding: 0.2px;
 	border-top-left-radius: 12px 12px;
 	border-top-right-radius: 12px 12px;
 	border: none;
-	text-align:center;
-	cursor:pointer;
+	text-align: center;
+	cursor: pointer;
 }
 
-.indexbutton-position{
+.indexbutton-position {
 	position: absolute;
 	top: 43%;
-	right:37%;
+	right: 37%;
 }
 
-.title{
+.title {
 	font-family: 'MBC1961GulimM';
 	font-size: 40px;
 }
 
-.searchbutton-position{
+.searchbutton-position {
 	position: absolute;
 	top: 80%;
-	right:35%;
+	right: 35%;
 }
 
-.searchbutton{
+.searchbutton {
 	font-family: 'Pretendard-Regular';
 	padding: 3px 5px;
 	background-color: white;
-	margin :1px;
+	margin: 1px;
 	border-radius: 6px;
-  border :2px solid #CBF1F5;
+	border: 2px solid #CBF1F5;
 	cursor: pointer;
- 	text-align: center;
- 	width: 200px;
- 	height: 32px;
- 	font-size: 18px;
+	text-align: center;
+	width: 200px;
+	height: 32px;
+	font-size: 18px;
 }
 
-.searchbutton:hover{
+.searchbutton:hover {
 	font-family: 'Pretendard-Regular';
 	padding: 3px 5px;
 	background-color: #CBF1F5;
-	margin :1px;
+	margin: 1px;
 	border-radius: 6px;
-  border :2px solid #CBF1F5;
+	border: 2px solid #CBF1F5;
 	cursor: pointer;
- 	text-align: center;
+	text-align: center;
 	width: 200px;
- 	height: 32px;
- 	font-size: 18px;
+	height: 32px;
+	font-size: 18px;
 }
 
-.belt{
+.belt {
 	background-color: #FFF1C1;
 	width: 100%;
-	height:300px;
+	height: 300px;
 	position: absolute;
 	bottom: -47%;
 }
 
-.back{
+.back {
 	position: fixed;
 	opacity: 0.95;
-	text-align:left;
-	padding-left:2%;
-	padding-top:5%;
-	padding-bottom:6%;
+	text-align: left;
+	padding-left: 2%;
+	padding-top: 5%;
+	padding-bottom: 6%;
 	background-color: #FFF1C1;
 	width: 530px;
 	height: 80px;
 	border-radius: 4px;
-	position : absolute;
+	position: absolute;
 	top: 46%;
-	left:34%;
+	left: 34%;
 }
 
-.but{
+.but {
 	font-family: 'Pretendard-Regular';
 	padding: 3px 5px;
 	background-color: white;
-	margin :1px;
+	margin: 1px;
 	border-radius: 6px;
-	border :2px solid #454545;
+	border: 2px solid #454545;
 	cursor: pointer;
- 	text-align: center;
+	text-align: center;
 }
 
-.but:hover{
+.but:hover {
 	font-family: 'Pretendard-Regular';
 	padding: 3px 5px;
-	background-color:#454545;
- 	color : white;
-	margin :1px;
+	background-color: #454545;
+	color: white;
+	margin: 1px;
 	border-radius: 6px;
-  	border :2px solid #454545;
+	border: 2px solid #454545;
 	cursor: pointer;
 }
 
-.sign-button{
+.sign-button {
 	font-family: 'Pretendard-Regular';
 	padding: 3px 5px;
-	background-color:#454545;
-	margin :1px;
+	background-color: #454545;
+	margin: 1px;
 	border-radius: 6px;
-	border :2px solid #454545;
+	border: 2px solid #454545;
 	cursor: pointer;
- 	text-align: center;
- 	width: 100px;
- 	height: 30px;
- 	font-size: 15px;
- 	color: #F6F1E9;
+	text-align: center;
+	width: 100px;
+	height: 30px;
+	font-size: 15px;
+	color: #F6F1E9;
 }
 
-.sign-button:hover{
-	background-color:white;
- 	color : #454545;
-	margin :1px;
+.sign-button:hover {
+	background-color: white;
+	color: #454545;
+	margin: 1px;
 	border-radius: 6px;
-  	border :2px solid #454545;
+	border: 2px solid #454545;
 	cursor: pointer;
-
 }
 
-.blank{
+.blank {
 	font-family: 'Pretendard-Regular';
 	border: 0;
 	padding-left: 8px;
-	padding-top : 2px;
-	padding-bottom : 2px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 	border-radius: 4px;
 }
 
-.signUp-balnk{
+.signUp-balnk {
 	font-family: 'Pretendard-Regular';
 	border-radius: 6px;
-	padding:4px;
+	padding: 4px;
 	width: 280px;
 	height: 35px;
-	margin:2px;
+	margin: 2px;
 }
 
-.title-blank{
+.title-blank {
 	font-family: 'Pretendard-Regular';
 	border-radius: 6px;
-	border :1px solid #454545;
-	padding:10px;
+	border: 1px solid #454545;
+	padding: 10px;
 	width: 380px;
 }
 
-.postBody-blank{
+.postBody-blank {
 	font-family: 'Pretendard-Regular';
 	border-radius: 6px;
-	border :1px solid #454545;
-	padding:10px;
+	border: 1px solid #454545;
+	padding: 10px;
 	width: 430px;
 	height: 1030px;
 	text-align: left;
 	vertical-align: top;
 }
 
-.loginId{
-  border-top-left-radius: 10px 10px;
-  border-top-right-radius: 10px 10px;
-  padding :10px;
-  height: 45px;
-  width: 300px;
-  border: 2px solid #454545;
-  font-size:20px;
+.loginId {
+	border-top-left-radius: 10px 10px;
+	border-top-right-radius: 10px 10px;
+	padding: 10px;
+	height: 45px;
+	width: 300px;
+	border: 2px solid #454545;
+	font-size: 20px;
 }
 
-.loginPass{
-  border-bottom-left-radius: 10px 10px;
-  border-bottom-right-radius: 10px 10px;
-  padding :10px;
-  height: 45px;
-  width: 300px;
-  border: 2px solid #454545;
-  font-size:20px;
+.loginPass {
+	border-bottom-left-radius: 10px 10px;
+	border-bottom-right-radius: 10px 10px;
+	padding: 10px;
+	height: 45px;
+	width: 300px;
+	border: 2px solid #454545;
+	font-size: 20px;
 }
 
-.root{
+.root {
 	font-family: 'Pretendard-Regular';
 	text-align: center;
 }
 
-.postDetail-position{
+.postDetail-position {
 	padding: 15%;
-
 }
 
 .camping-item {
-        display: inline-block;
-        text-align: center;
-        vertical-align: top;
-      	margin: 0 20px 20px 0;
-    }
+	display: inline-block;
+	text-align: center;
+	vertical-align: top;
+	margin: 0 20px 20px 0;
+}
+
+/*-------------상세 검색의 CSS ------------------------------*/
+/*팝업창 CSS*/
+.ds-box {
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px
+		rgba(0, 0, 0, 0.23);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+/*box가 열리면서 주변이 어둡게 해주는 CSS*/
+#ds-overlay {
+	background-color: rgba(0, 0, 0, 0.6);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+/*box 안 컨텐츠 CSS*/
+#ds-content {
+	position: relative;
+	background-color: aliceblue;
+	padding: 50px 100px;
+	text-align: center;
+	width: 50%;
+	height: 50%;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px
+		rgba(0, 0, 0, 0.23);
+	border-radius: 10px;
+}
+/*닫기 버튼 클릭시 팝업창이 사라지게 하는 CSS*/
+.hidden {
+	display: none;
+}
