--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -210,7 +210,7 @@ a {
 }
 
 .icon-size {
-	width: 15%;
+	width: 11%;
 	border-radius: 9999px;
 }
 
@@ -227,15 +227,15 @@ a {
 }
 
 .icon-size-etc {
-	width: 11%;
+	width: 9%;
 	border-radius: 9999px;
 }
 
 .detail-img {
 	display: flex;
-	flex: 0.4;
+	flex: 1;
 	position: relative;
-	width: 100%;
+	height: 50%;
 	padding-left: 5%;
 }
 
@@ -256,7 +256,7 @@ a {
 	gap: 0.3em;
 	align-items: center;
 	flex: 1;
-	padding-right: 5%;
+	padding-right: 7%;
 }
 
 .camping-line {
