--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -36,6 +36,19 @@ a {
 	color: black;
 }
 
+.detail-search{
+	background-color: #CBF1F5;
+	border-radius: 4px;
+	border: 0.6px solid #CBF1F5;
+	cursor: pointer;
+	padding:3px;
+}
+
+detail-search:hover{
+	box-shadow: 0 2px 4px -2px rgb(0 0 0/ 0.1), 0 4px 6px -1px
+		rgb(0 0 0/ 0.1);
+}
+
 .select-deco {
 	width: 30%;
 	padding: 2px;
@@ -163,6 +176,15 @@ a {
 	padding: 4px;
 }
 
+.detail-search-position{
+	display: flex;
+    align-items: start;
+    height: 95%;
+    padding: 5px;
+    width: 17%;
+}
+
+
 .search-box {
 	border-radius: 8px;
 	text-align: center;
@@ -205,7 +227,6 @@ a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 5em;
 	gap: 15px;
 }
 
