--- a/src/main/webapp/resource/style.css
+++ b/src/main/webapp/resource/style.css
@@ -627,20 +627,85 @@ a:hover {
 	width: 100%;
 	height: 100%;
 	position: absolute;
+	z-index: 1;
 }
 /*box 안 컨텐츠 CSS*/
 #ds-content {
 	position: relative;
 	background-color: aliceblue;
-	padding: 50px 100px;
+	padding: 10px 20px;
 	text-align: center;
-	width: 50%;
+	width: 40%;
 	height: 50%;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px
 		rgba(0, 0, 0, 0.23);
 	border-radius: 10px;
+	z-index: 1;
 }
 /*닫기 버튼 클릭시 팝업창이 사라지게 하는 CSS*/
 .hidden {
 	display: none;
+}
+/*상세검색 태그 속성 CSS*/
+.ds-btn-ctr {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.ds-container {
+	width: 650px;
+	display: flex;
+	align-items: center;
+}	
+
+.ds-list-title {
+	display: flex;
+	width: 73px;
+	font-weight: bold;
+}
+
+.ds-list-title1 {
+	display: flex;
+	width: 166px;
+	font-weight: bold;
+}
+
+.ds-list-title2 {
+	display: flex;
+	width: 113px;
+	font-weight: bold;
+}
+
+.ds-list-title3 {
+	display: flex;
+	width: 112px;
+	font-weight: bold;
+}
+
+.ds-list-rage {
+	display: flex;
+}
+
+ul {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	padding-right: 3px;
+}
+
+li{
+	list-style: none;	
+}
+label {
+	
+	padding-inline: 4px;
+}
+
+/*box 내부 검색, 초기화 버튼 제어*/
+.btn-ctr {
+	padding-top: 20px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
 }
